--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "vite": "^5.4.7"
   },
   "babel": {
@@ -34,6 +36,7 @@
     "last 3 safari versions"
   ],
   "dependencies": {
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "@polkadot/api": "^10.11.2"
   }
 }
